--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,13 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'info.hoang8f:android-segmented:1.0.6'
-    compile 'com.google.firebase:firebase-core:9.8.0'
+    compile 'com.google.firebase:firebase-core:10.0.0'
+    compile 'com.android.support:design:25.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.0'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:design:25.0.0'
 }
 //apply plugin: 'com.google.gms.google-services'
+
+apply plugin: 'com.google.gms.google-services'
